syntax = "proto3";

message StatusRequest {
  //empty
}

message StatusResponse {
  string status = 1;
}

service NodeControlService {
  rpc status(StatusRequest) returns (StatusResponse);
}
